# ops_perf

./: .gitignore  CMakeLists.txt  README.md  build.sh  nsight_install.sh
cmake/: CompileCUDA.cmake
cuda_test/: io_test.cu  matmul_test.cu  utils.h  vecadd_demo.cu
cuda_test/micro_benchmark/: CMakeLists.txt  l1cache.cu  l2cache.cu
cuda_test/torch_test/blur/: blur.cu  blur.py
cuda_test/torch_test/color2gray/: color2gray.cu  color2gray.py
cuda_test/torch_test/conv/: conv_test.cc  custom_conv.py
cuda_test/torch_test/conv/conv_build/: .ninja_deps  .ninja_log
cuda_test/torch_test/merge/: custom_merge.py  merge_test.cc
cuda_test/torch_test/mm/: matmul.cu  matmul.py
cuda_test/torch_test/reduce/: custom_reduce.py  reduce_test.cc
cuda_test/torch_test/scan/: custom_scan.py  scan_test.cc
docs/: bank_conflict.md  matmul.md
example/: CMakeLists.txt  test.cc
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  benchmark.cpp
src/core/: Allocator.cc  Allocator.h  Device.h  Library.cc  Library.h  OpRegistry.inc.h  ScalarType.h  Schema.h  SizesAndStrides.h  Storage.h  StorageImpl.cc  StorageImpl.h  Tensor.h  TensorFactory.cc  TensorFactory.h  TensorImpl.cc  TensorImpl.h  traits.h  utils.h
src/cpu/: cpu_add.cc  cpu_add.h  cpu_matmul.cc  cpu_matmul.h  generator.h
src/gpu/: CMakeLists.txt  gpu_matmul.cu  gpu_matmul.h  gpu_reduce.cu  gpu_transpose.cu
src/ops/: cpu_matmul.cc  gpu_matmul.cu  gpu_reduce.cu  gpu_transpose.cu
src/ops/include/: baseline.h  cpu_matmul.h  gpu_matmul.h
src/utils/: CMakeLists.txt  baseline.h  utils.cpp
src/utils/include/: utils.h
temp_source/: CMakeLists.txt  matmul_test.cu  reduce_test.cu  utils.h
tests/: CMakeLists.txt  baseline_test.cc  core_test.cc  tensor_test.cc
